--- a/ExamManager/appsettings.json
+++ b/ExamManager/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ConnectionStr": "Data Source=DESKTOP-69FDS3D\\SQLEXPRESS;Initial Catalog=ExamManagement;Integrated Security=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
